# PythonArtRgb

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build_wheels.yml
examples/: example_colorbox.py  example_colorwheel.py  example_colorwheelbox.py
src/ArtRgb/: ColorBox.py  ColorDot.py  ColorWheel.py  Rgb.py  color_box.py  color_dot.py  color_wheel.py
src/artrgb/: color_box.py  color_wheel.py  color_wheel_box.py  rgb.py
tests/: test_ColorBox.py  test_ColorWheel.py  test_ColorWheelbox.py  test_Rgb.py
tests/ArtRgb/: test_Rgb.py
