[build-system]
requires = ["setuptools"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# addopts = "--cov=artrgb --cov-report html"

[tool.coverage.run]
omit=["*/tests/*"]

[tool.setuptools]
packages = ["artrgb"]
package-dir = { "" = "src" }

[project]
name = "pythonartrgb"
description = "Color utilities for artists"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["Pillow", "numpy"]
dynamic = ["version"]
license = "MIT"
classifiers = ["Private :: Do Not Upload"]

# uv pip install -e '.[test|dev]'
[project.optional-dependencies]
test = ["pytest", "pytest-cov", "tox"]
dev = ["black", "isort"]


